--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>A second place, home away from home</h1>
+<p>Till i build this, go to martialmechie.wordpress.com.</p>
 </body>
 </html>
